# dragon

./: .gitmodules  CMakeLists.txt  README.md  continue.sh  dragon.toml  helix_features_spec.md  imgui.ini  install.sh  test.sh
docs/: USER_GUIDE.md
include/dragon_editor/: app.h  buffer.h  command.h  config.h  cursor.h  document.h  gui.h  history.h  input.h  lsp.h  lsp_config.h  mode.h  panel_about.h  panel_buffer_picker.h  panel_changed_files.h  panel_code_actions.h  panel_completion.h  panel_file_browser.h  panel_find_replace.h  panel_jumplist_picker.h  panel_lsp_diagnostics.h  panel_lsp_goto.h  panel_lsp_hover.h  panel_notification.h  panel_palette.h  panel_plugins.h  panel_rename.h  panel_settings.h  panel_space_menu.h  panel_symbols_picker.h  panel_terminal.h  panel_treesitter_inspector.h  panel_workspace_diagnostics.h  panel_workspace_symbols.h  renderer.h  syntax.h  text.h  theme.h  treesitter.h
src/: main.c
src/core/: app.c  command.c  input.c  mode.c  renderer.c
src/editor/: buffer.c  config.c  cursor.c  document.c  history.c  lsp.c  lsp_config.c  syntax.c  treesitter.c
src/gui/: gui.c  panel_notification.c  text.c  theme.c
src/gui/panels/: about.c  buffer_picker.c  changed_files.c  code_actions.c  completion.c  file_browser.c  find_replace.c  goto_line.c  jumplist_picker.c  lsp_diagnostics_picker.c  lsp_goto_picker.c  lsp_hover_panel.c  palette.c  panel_changed_files.h  panel_completion.h  panel_file_browser.h  panel_find_replace.h  panel_goto.h  panel_palette.h  panel_statusbar.h  plugins.c  rename.c  settings.c  space_menu.c  statusbar.c  symbols_picker.c  terminal.c  treesitter_inspector.c  workspace_diagnostics.c  workspace_symbols.c
tests/: test_all.c  test_extra.inc
